<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetContainer"
    android:background="@drawable/bottom_sheet_bg"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_now"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="15dp"
        android:textColor="@color/ColorPrimaryText"
        android:textSize="18sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal">
        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="100dp"
            android:src="@drawable/maxresdefault"
            android:scaleType="centerCrop"
            android:layout_margin="10dp"
            app:riv_corner_radius="10dp"
            android:layout_height="@dimen/default_imv"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/ColorPrimaryText"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="17sp"
                android:gravity="start"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="15sp"
                android:gravity="start"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textSize="15sp"
                android:textColor="@android:color/holo_blue_bright" />

        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:layout_gravity="center_vertical"
        android:padding="12dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/default_size_icon"
            android:layout_height="@dimen/default_size_icon"
            android:src="@drawable/ic_favorite"
            android:tint="@android:color/holo_red_dark"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_to_favorite"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:layout_gravity="center_vertical"
        android:padding="12dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/default_size_icon"
            android:layout_height="@dimen/default_size_icon"
            android:src="@drawable/ic_share_black_24dp"
            android:tint="@android:color/holo_red_dark"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_product_via"
            android:layout_marginStart="10dp"
            android:textSize="15dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button_bg"
        android:textColor="@android:color/white"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:textSize="15dp"/>

</LinearLayout>